--- a/projects.css
+++ b/projects.css
@@ -21,6 +21,8 @@ body {
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
     height: 100vh;
+   
+    
 }
 
 .sidebar h2 {
@@ -52,64 +54,27 @@ body {
 .content {
     flex-grow: 1;
     padding: 40px;
+    z-index: 1;
 }
 
 .project-file {
-    background-color: #080413;
+    background-color: #1a1a1a;
     border: 2px solid #2d02ad;
     border-radius: 10px;
     padding: 20px;
-    margin-bottom: 20px;
+    width: calc(33.33% - 20px); 
+    transition: transform 0.3s, background-color 0.3s;
     cursor: pointer;
-    transition: transform 0.3s;
+    text-align: center;
 }
-
 .project-file:hover {
     transform: scale(1.05);
 }
 
-.popup {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content {
-    background-color: #1a1a1a;
-    padding: 20px;
-    border: 2px solid #2d02ad;
-    border-radius: 10px;
-    width: 80%;
-    max-width: 600px;
-    text-align: center;
-}
-
-.close {
-    color: #ffffff;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.close:hover {
-    color: #2d02ad;
-}
-
-.popup img {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
-    border: 2px solid #2d02ad;
-    border-radius: 10px;
+.projects-overview {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
 }
 
 .image{
@@ -145,58 +110,14 @@ body {
     color: #2d02ad;
 }
 
-@media screen and (max-width: 600px){
-	nav {
-		width: 100%;
-		position: relative;
-	}
-	main {
-		width: 100%;
-		position: relative;
-	}
+@media (max-width: 768px) {
+    .project-file {
+        width: calc(50% - 10px); 
+    }
 }
 
-@media screen and (max-width: 800px) {
-	.information img {
-	  width: 500px;
-	}
-	.information h1{
-		font-size: 28px;
-	}
-	.card p{
-		padding: 0%;
-		font-size: 9px;
-		line-height: 11px;
-	  }
-	  .card h3{
-		  font-size: 12px;
-	   }
-	  .card {
-		  width: 160px;
-		  height: 200px;
-		  margin: 2px;
-	  }
-	  .cardcontainer{
-		width:100%;
-		margin-left: 0%;
-	  }
-	  h1 {
-		  font-size: 16px;
-		  line-height: 18px;
-		  margin-bottom: 5px;
-	  }
-	  p	{
-		  font-size: 10px;
-		  line-height: 12px;
-	  }
-	  main{
-		height: 100vh;
-	  }
-     }
-
-  @media screen and (max-width: 500px) {
-	.information img {
-	  width: 300px;
-	}
-  }
-
+@media (max-width: 480px) {
+    .project-file {
+        width: 100%; 
+    }
+}
